--- a/package.json
+++ b/package.json
@@ -21,12 +21,19 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.9",
-    "react-icons": "^4.2.0",
     "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.2.0",
     "react-lazy-load-image-component": "^1.5.0",
     "react-share": "^4.4.0",
     "react-toastify": "^5.5.0",
     "sass": "^1.26.8"
+  },
+  "prettier":{
+    "semi": false,
+    "singleQuote": true,
+    "useTabs": true,
+    "tabWidth": 2,
+    "trailingComma": "all"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.1",
@@ -34,6 +41,7 @@
     "@types/next": "^9.0.0",
     "@types/node": "^12.12.45",
     "npm-link-shared": "^0.5.6",
+    "prettier": "2.3.2",
     "typescript": "^3.9.5",
     "url-loader": "^4.1.0"
   }
