--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-dom": "^16.13.1",
     "react-feather": "^2.0.9",
     "react-google-recaptcha": "^2.1.0",
+    "react-icons": "^4.2.0",
     "react-lazy-load-image-component": "^1.5.0",
     "react-share": "^4.4.0",
     "react-toastify": "^5.5.0",
