fix: minor change
- add print width to 100 for pretier
- resave footer
- remove export from type emptycomponentpropstype

--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "singleQuote": true,
     "useTabs": true,
     "tabWidth": 2,
-    "trailingComma": "all"
+    "trailingComma": "all",
+    "printWidth": 100
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.1",
