--- a/package.json
+++ b/package.json
@@ -32,8 +32,7 @@
   "prettier": {
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "none",
-    "printWidth": 100
+    "trailingComma": "none"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.10.1",
