--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -16,6 +16,12 @@ jobs:
       - name: Checkout master branch
         uses: actions/checkout@v2
 
+      - name: Pull checkout latest tag
+        run: | 
+          latesttag=$(git describe --tags)
+          echo checking out ${latesttag}
+          git checkout ${latesttag}
+
       - name: Install dependencies
         run: npm install
 
