--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -17,7 +17,7 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Fetch origin tags
-        run: git fecth origin --tags
+        run: git fetch origin --tags
         working-directory: /var/www/rose
       
       - name: Checkout latest tag
