build: Move build repo actions checkout v2

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -18,7 +18,8 @@ jobs:
         with:
           path: dreamcubeid-rose-${{ github.run_id }}-${{ github.run_number }}
       
-      - run: mv dreamcubeid-rose-${{ github.run_id }}-${{ github.run_number }} /var/www/rose
+      - run: mv dreamcubeid-rose-${{ github.run_id }}-${{ github.run_number }}/* /var/www/rose/
+        working-directory: /home/rose/actions-runner/_work/rose/rose
 
       - name: Install dependencies
         run: npm install
